[gd_scene load_steps=2 format=3 uid="uid://c6x3tgkvj7n1h"]

[ext_resource type="Script" uid="uid://df32u8rud88ov" path="res://Scenes/photo_hud.gd" id="1_veyj3"]

[node name="PhotoHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_veyj3")

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Frame" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/HBoxContainer/Frame"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 20.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="TL" type="OptionButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TR" type="OptionButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BL" type="OptionButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BR" type="OptionButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="IncludeUICheck" type="CheckButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Include UI"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ShotBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Take Photo"

[node name="CloseBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
